--- a/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vAS-br-Oxf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vAS-br-Oxf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="oAa-CT-OPi"/>
+                        <segue destination="B8m-Nk-0NK" kind="relationship" relationship="rootViewController" id="QCh-Kl-hM4"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V0g-9X-vRk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -145,19 +145,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Pic-Ey-D0e" customClass="GeoTrackMap" customModule="GeoTrackKit">
-                                <rect key="frame" x="0.0" y="28" width="375" height="639"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" translatesAutoresizingMaskIntoConstraints="NO" id="Pic-Ey-D0e" customClass="GeoTrackMap" customModule="GeoTrackKit">
+                                <rect key="frame" x="0.0" y="28" width="375" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="hvp-LM-gV1"/>
+                                </constraints>
                             </mapView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qkh-Kn-k7p">
+                                <rect key="frame" x="0.0" y="328" width="375" height="339"/>
+                                <connections>
+                                    <segue destination="LLl-ZV-RZR" kind="embed" id="CKh-wL-EgL"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Pic-Ey-D0e" firstAttribute="top" secondItem="oFI-HB-CCF" secondAttribute="bottom" constant="8" id="0gV-p4-cGK"/>
                             <constraint firstItem="Pic-Ey-D0e" firstAttribute="leading" secondItem="y0f-YD-ipn" secondAttribute="leading" id="GEo-Db-mqu"/>
+                            <constraint firstItem="qkh-Kn-k7p" firstAttribute="leading" secondItem="y0f-YD-ipn" secondAttribute="leading" id="Mh9-d7-hky"/>
                             <constraint firstAttribute="trailing" secondItem="Pic-Ey-D0e" secondAttribute="trailing" id="SPj-Xn-vDj"/>
-                            <constraint firstItem="Osg-eL-Prt" firstAttribute="top" secondItem="Pic-Ey-D0e" secondAttribute="bottom" id="vjE-rY-Cvv"/>
+                            <constraint firstItem="qkh-Kn-k7p" firstAttribute="top" secondItem="Pic-Ey-D0e" secondAttribute="bottom" id="a9C-7A-xOQ"/>
+                            <constraint firstAttribute="trailing" secondItem="qkh-Kn-k7p" secondAttribute="trailing" id="aKZ-WO-tH4"/>
+                            <constraint firstItem="Osg-eL-Prt" firstAttribute="top" secondItem="qkh-Kn-k7p" secondAttribute="bottom" id="icT-nP-b4I"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Bh2-03-9cp"/>
                     <connections>
+                        <outlet property="legContainerView" destination="qkh-Kn-k7p" id="gTQ-ze-50G"/>
                         <outlet property="mapView" destination="Pic-Ey-D0e" id="L9U-UF-sfj"/>
                     </connections>
                 </viewController>
@@ -165,5 +179,63 @@
             </objects>
             <point key="canvasLocation" x="957.60000000000002" y="123.68815592203899"/>
         </scene>
+        <!--Track Overview Table View Controller-->
+        <scene sceneID="mWE-4m-JB6">
+            <objects>
+                <tableViewController id="LLl-ZV-RZR" customClass="TrackOverviewTableViewController" customModule="GeoTrackKitExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="e9f-NX-TqQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="339"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LegSwitchCell" rowHeight="60" id="nYJ-8N-gqT" customClass="LegSwitchCell" customModule="GeoTrackKitExample" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nYJ-8N-gqT" id="uDD-QK-TzM">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aRp-un-fY3">
+                                            <rect key="frame" x="8" y="14" width="51" height="31"/>
+                                            <connections>
+                                                <action selector="didToggleSwitch:" destination="nYJ-8N-gqT" eventType="valueChanged" id="vhZ-Yr-ZZi"/>
+                                            </connections>
+                                        </switch>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbD-SD-28g">
+                                            <rect key="frame" x="65" y="16" width="310" height="27.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="ZbD-SD-28g" secondAttribute="bottom" constant="8" id="7OR-oN-2ZC"/>
+                                        <constraint firstItem="ZbD-SD-28g" firstAttribute="leading" secondItem="aRp-un-fY3" secondAttribute="trailing" constant="8" id="8Zw-Fa-0Ys"/>
+                                        <constraint firstItem="ZbD-SD-28g" firstAttribute="top" secondItem="uDD-QK-TzM" secondAttribute="topMargin" constant="8" id="Egf-hG-5EE"/>
+                                        <constraint firstItem="aRp-un-fY3" firstAttribute="centerY" secondItem="uDD-QK-TzM" secondAttribute="centerY" id="I4B-Ch-PUs"/>
+                                        <constraint firstItem="ZbD-SD-28g" firstAttribute="leading" secondItem="aRp-un-fY3" secondAttribute="trailing" constant="8" id="OXy-vY-Nzb"/>
+                                        <constraint firstItem="ZbD-SD-28g" firstAttribute="trailing" secondItem="uDD-QK-TzM" secondAttribute="trailingMargin" constant="8" id="dQd-dn-oJx"/>
+                                        <constraint firstItem="aRp-un-fY3" firstAttribute="leading" secondItem="uDD-QK-TzM" secondAttribute="leadingMargin" id="h9D-GL-tNt"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="label" destination="ZbD-SD-28g" id="1bO-bv-9RB"/>
+                                    <outlet property="toggleSwitch" destination="aRp-un-fY3" id="cFT-5W-kmJ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="LLl-ZV-RZR" id="lwu-4C-KW2"/>
+                            <outlet property="delegate" destination="LLl-ZV-RZR" id="nw0-R2-dph"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZXQ-4h-k7v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.60000000000002" y="721.88905547226398"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="EWF-6j-kNk"/>
+    </inferredMetricsTieBreakers>
 </document>
