--- a/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
@@ -1,146 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vAS-br-Oxf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="xmy-us-EB5">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="cC7-aP-Db7">
+        <!--Tab Bar Controller-->
+        <scene sceneID="Etq-sn-q9n">
             <objects>
-                <navigationController id="vAS-br-Oxf" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2zA-sH-ubp">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                <tabBarController id="xmy-us-EB5" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VvA-3l-LrO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="EEu-Yz-OB7"/>
+                        <segue destination="tBK-oR-W6E" kind="relationship" relationship="viewControllers" id="0g8-hp-Ff4"/>
+                        <segue destination="OVK-Q8-tUv" kind="relationship" relationship="viewControllers" id="H0b-r1-kbD"/>
+                        <segue destination="OaI-S6-tDf" kind="relationship" relationship="viewControllers" id="dcO-FC-dRU"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="V0g-9X-vRk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oUu-qc-X2x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-838" y="124"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GeoTrackKitExample" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LOs-mN-l14">
-                                <rect key="frame" x="139" y="72" width="97" height="30"/>
-                                <state key="normal" title="Start Tracking"/>
-                                <connections>
-                                    <action selector="clickedTrackButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YjZ-Ek-ECX"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Altitude: 10,123 ft / 3231 m" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rZ7-JS-I5I">
-                                <rect key="frame" x="16" y="115" width="343" height="20.5"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lat/Lon:: 12.32, 124.75" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8tl-pZ-V1I">
-                                <rect key="frame" x="16" y="143.5" width="343" height="20.5"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hAcc/vAcc: 10.05, 17.52" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wtR-9c-Ec2">
-                                <rect key="frame" x="16" y="172" width="343" height="20.5"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points: 12,623" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hzb-aq-lg6">
-                                <rect key="frame" x="16" y="229" width="343" height="20.5"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="GMH-Fy-HbR">
-                                <rect key="frame" x="0.0" y="257.5" width="375" height="401.5"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <string key="text">Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  Event Log goes here.  </string>
-                                <color key="textColor" red="0.46666666870000001" green="0.76470589639999997" blue="0.26666668059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speed: 55mph / 80kmph" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3iD-Vg-2Sp">
-                                <rect key="frame" x="16" y="200.5" width="343" height="20.5"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mzl-9Q-GwQ">
-                                <rect key="frame" x="329" y="72" width="30" height="30"/>
-                                <state key="normal" title="Map"/>
-                                <connections>
-                                    <segue destination="OaI-S6-tDf" kind="show" id="Yd0-kC-0fS"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="hzb-aq-lg6" firstAttribute="top" secondItem="3iD-Vg-2Sp" secondAttribute="bottom" constant="8" id="0uZ-oH-okk"/>
-                            <constraint firstItem="3iD-Vg-2Sp" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="5Je-iB-553"/>
-                            <constraint firstItem="3iD-Vg-2Sp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="5jt-fS-dM8"/>
-                            <constraint firstItem="rZ7-JS-I5I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="CAV-CP-K1I"/>
-                            <constraint firstItem="GMH-Fy-HbR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DMm-9N-Web"/>
-                            <constraint firstItem="LOs-mN-l14" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EbN-Fj-IO4"/>
-                            <constraint firstItem="Mzl-9Q-GwQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="FLZ-Jg-nN7"/>
-                            <constraint firstItem="hzb-aq-lg6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Ldw-CL-TJC"/>
-                            <constraint firstItem="8tl-pZ-V1I" firstAttribute="top" secondItem="rZ7-JS-I5I" secondAttribute="bottom" constant="8" id="Nqe-kR-r1o"/>
-                            <constraint firstItem="hzb-aq-lg6" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="PYA-0U-tVQ"/>
-                            <constraint firstItem="wtR-9c-Ec2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Sv1-UV-syp"/>
-                            <constraint firstItem="8tl-pZ-V1I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ZBo-y6-vDX"/>
-                            <constraint firstItem="Mzl-9Q-GwQ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="aI7-s7-oJF"/>
-                            <constraint firstItem="8tl-pZ-V1I" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="aYP-B5-cBE"/>
-                            <constraint firstItem="GMH-Fy-HbR" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="ad9-ua-hWz"/>
-                            <constraint firstItem="wtR-9c-Ec2" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="bOb-WK-DFe"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="GMH-Fy-HbR" secondAttribute="bottom" constant="8" id="cG1-gw-lge"/>
-                            <constraint firstItem="LOs-mN-l14" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="ifC-WH-13F"/>
-                            <constraint firstItem="GMH-Fy-HbR" firstAttribute="top" secondItem="hzb-aq-lg6" secondAttribute="bottom" constant="8" id="kBK-0M-gTa"/>
-                            <constraint firstItem="wtR-9c-Ec2" firstAttribute="top" secondItem="8tl-pZ-V1I" secondAttribute="bottom" constant="8" id="oTK-bp-eEF"/>
-                            <constraint firstItem="3iD-Vg-2Sp" firstAttribute="top" secondItem="wtR-9c-Ec2" secondAttribute="bottom" constant="8" id="tvK-9d-x6s"/>
-                            <constraint firstItem="rZ7-JS-I5I" firstAttribute="top" secondItem="LOs-mN-l14" secondAttribute="bottom" constant="13" id="uVt-r3-50u"/>
-                            <constraint firstItem="rZ7-JS-I5I" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="vFV-0a-CYU"/>
-                            <constraint firstItem="Mzl-9Q-GwQ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="wwU-Nw-Vjg"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="9X8-SX-TVu"/>
-                    <connections>
-                        <outlet property="accuracyLabel" destination="wtR-9c-Ec2" id="IPd-v2-iSX"/>
-                        <outlet property="altitudeLabel" destination="rZ7-JS-I5I" id="jb0-ji-g16"/>
-                        <outlet property="button" destination="LOs-mN-l14" id="piC-G3-eAt"/>
-                        <outlet property="eventLog" destination="GMH-Fy-HbR" id="Pou-8l-VeR"/>
-                        <outlet property="locationLabel" destination="8tl-pZ-V1I" id="aok-C4-aMH"/>
-                        <outlet property="pointsLabel" destination="hzb-aq-lg6" id="Lib-2r-bgD"/>
-                        <outlet property="speedLabel" destination="3iD-Vg-2Sp" id="eT9-LI-pSd"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="116" y="123.68815592203899"/>
+            <point key="canvasLocation" x="-932" y="-1409"/>
         </scene>
         <!--TrackMapViewController-->
         <scene sceneID="9hM-Gc-zrp">
             <objects>
-                <viewControllerPlaceholder storyboardName="TrackView" referencedIdentifier="TrackMapViewController" id="OaI-S6-tDf" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K2p-gH-Vvj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="TrackView" referencedIdentifier="TrackMapViewController" id="OaI-S6-tDf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="map-location" id="u9j-ex-vh6"/>
+                </viewControllerPlaceholder>
             </objects>
-            <point key="canvasLocation" x="843" y="123"/>
+            <point key="canvasLocation" x="-210" y="-1410"/>
+        </scene>
+        <!--LiveTrackView-->
+        <scene sceneID="NfS-Us-370">
+            <objects>
+                <viewControllerPlaceholder storyboardName="LiveTrackingView" referencedIdentifier="LiveTrackView" id="OVK-Q8-tUv" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="location-on-map" id="0ZO-eF-Uhq"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Avb-ui-oOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-209" y="-1303"/>
+        </scene>
+        <!--TrackConsole-->
+        <scene sceneID="0QX-aq-1Os">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TrackConsole" id="tBK-oR-W6E" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="icon" id="f5X-hp-qdm"/>
+                    <navigationItem key="navigationItem" id="Ww7-xq-O5M"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8CA-54-B4d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-249" y="-1509"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon" width="42" height="42"/>
+        <image name="location-on-map" width="42" height="42"/>
+        <image name="map-location" width="42" height="42"/>
+    </resources>
 </document>
