Added an icon for the tab, added the tab, hooked up saving of tracks and the ability to see the tracks and load a map of them by clicking on them.

--- a/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Base.lproj/Main.storyboard
@@ -20,9 +20,10 @@
                     </tabBar>
                     <connections>
                         <segue destination="tBK-oR-W6E" kind="relationship" relationship="viewControllers" id="0g8-hp-Ff4"/>
-                        <segue destination="OVK-Q8-tUv" kind="relationship" relationship="viewControllers" id="H0b-r1-kbD"/>
-                        <segue destination="wj6-hs-RS0" kind="relationship" relationship="viewControllers" id="dcO-FC-dRU"/>
-                        <segue destination="j5O-Cr-Gkr" kind="relationship" relationship="viewControllers" id="Gxm-EH-npj"/>
+                        <segue destination="nbm-Ww-yqN" kind="relationship" relationship="viewControllers" id="FOp-ew-7hy"/>
+                        <segue destination="OVK-Q8-tUv" kind="relationship" relationship="viewControllers" id="ZXt-X1-xrh"/>
+                        <segue destination="wj6-hs-RS0" kind="relationship" relationship="viewControllers" id="iEp-j9-cvg"/>
+                        <segue destination="j5O-Cr-Gkr" kind="relationship" relationship="viewControllers" id="CzR-00-mkb"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oUu-qc-X2x" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -37,7 +38,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K2p-gH-Vvj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="829" y="-1332"/>
+            <point key="canvasLocation" x="834" y="-1323"/>
         </scene>
         <!--TrackImport-->
         <scene sceneID="9lZ-bp-zgW">
@@ -47,7 +48,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F5Y-gl-5gM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-257" y="-1258"/>
+            <point key="canvasLocation" x="-348" y="-756"/>
+        </scene>
+        <!--TrackList-->
+        <scene sceneID="vXZ-h4-lp4">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TrackList" id="nbm-Ww-yqN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ex1-9X-ric"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8WQ-Tj-eK5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-304" y="-1649"/>
         </scene>
         <!--LiveTrackView-->
         <scene sceneID="NfS-Us-370">
@@ -57,7 +68,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Avb-ui-oOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-247" y="-1418"/>
+            <point key="canvasLocation" x="-279" y="-1564"/>
         </scene>
         <!--TrackConsole-->
         <scene sceneID="0QX-aq-1Os">
@@ -68,7 +79,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8CA-54-B4d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-249" y="-1509"/>
+            <point key="canvasLocation" x="-282" y="-1718"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4JH-aI-Bs0">
@@ -87,7 +98,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eF2-9K-mMH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="215" y="-1332"/>
+            <point key="canvasLocation" x="17" y="-1167"/>
         </scene>
     </scenes>
     <resources>
