Added the ability to merge two tracks.

--- a/GeoTrackKitExample/GeoTrackKitExample/Views/TrackList/TrackList.storyboard
+++ b/GeoTrackKitExample/GeoTrackKitExample/Views/TrackList/TrackList.storyboard
@@ -48,6 +48,34 @@
             </objects>
             <point key="canvasLocation" x="1105" y="118"/>
         </scene>
+        <!--Select Track Dialog-->
+        <scene sceneID="0Nt-aH-mUc">
+            <objects>
+                <tableViewController storyboardIdentifier="SelectTrackDialog" id="Obe-Em-v2u" customClass="SelectTrackDialog" customModule="GeoTrackKitExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CQ9-CU-DTC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="yhJ-MW-Ccv">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yhJ-MW-Ccv" id="uDb-uV-6Q1">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Obe-Em-v2u" id="YYN-a4-npZ"/>
+                            <outlet property="delegate" destination="Obe-Em-v2u" id="GCn-p8-nwQ"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mr9-d3-W8x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1105" y="958"/>
+        </scene>
         <!--TrackMapViewController-->
         <scene sceneID="BC3-bJ-V1v">
             <objects>
